<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/layout_padding"
        >

        <com.example.android.wizardpager.wizard.ui.StepPagerStrip
            android:id="@+id/strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:gravity="left" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/butler_placeholder"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/paragraph_padding"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <View android:id="@+id/divider"
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/selectable_item_background"
            android:id="@+id/decline_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/textButtonDecline" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/selectable_item_background"
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/textButtonPrev" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/selectable_item_background"
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/textButtonNext" />
    </LinearLayout>

</LinearLayout>
