<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryList"
    android:id="@+id/category_list_layout">


    <LinearLayout
        android:id="@+id/category_list_topBar"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/butler" />
        <TextView
            android:id="@+id/category_list_textViewButlerSpeech"
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/category_list_butlerSpeechGreetings"/>
        <SearchView
            android:id="@+id/category_list_searchView"
            android:visibility="gone"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:queryHint="@string/search_bar_queryHint"/>
    </LinearLayout>

    <ListView
        android:id="@+id/category_list_listViewCategory"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/layout_padding"
        android:layout_weight="1"/>
    <RelativeLayout
        android:id="@+id/category_list_taskBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/taskbar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_search"
            android:contentDescription="@string/taskbar_LabelDashboard"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:id="@+id/category_list_buttonSearch"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:onClick="buttonSearch_onClick"/>
    </RelativeLayout>
</LinearLayout>