<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.guardian.ebutler.ebutler.TaskDetail"
    android:orientation="vertical"
    android:id="@+id/task_detail_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding_double">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/butler_gif"/>
        <TextView
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/layout_padding"
            android:gravity="center_vertical"
            android:text="@string/task_detail_ButlerChatStatment"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_detail_basicInfo"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_padding_double">
            <EditText
                android:id="@+id/task_detail_editTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_detail_hintTaskName"
                android:layout_marginLeft="@dimen/layout_padding"
                android:layout_marginBottom="@dimen/layout_padding_double"
                android:textSize="@dimen/font_size_extra_large"
                android:background="@color/transparent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding_double"
                android:id="@+id/task_detail_TaskFragmentContainer"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/taskbar_height"
        android:gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_arrow_back"
            android:contentDescription="@string/task_detail_textButtonCancel"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:id="@+id/task_detail_buttonCancel"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_delete_white"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:id="@+id/task_detail_buttonDelete"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />
        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_done"
            android:contentDescription="@string/task_detail_textButtonFinish"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/task_detail_buttonDone"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
    </RelativeLayout>
</LinearLayout>
