<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.guardian.ebutler.ebutler.ChooseLocation"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/task_detail_searchBar">
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_bar_queryHint"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/layout_padding"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingTop="@dimen/layout_padding">
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Nhà"
                    android:textOn="Nhà"
                    android:background="@drawable/border_rounded_toggle"
                    android:id="@+id/button1"
                    android:textColor="@drawable/border_rounded_toggle_text"
                    android:layout_weight="1"
                    android:tag="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingTop="@dimen/layout_padding">
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Công ti"
                    android:textOn="Công ti"
                    android:background="@drawable/border_rounded_toggle"
                    android:id="@+id/button2"
                    android:textColor="@drawable/border_rounded_toggle_text"
                    android:layout_weight="1"
                    android:tag="2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingTop="@dimen/layout_padding">
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Nhà vợ"
                    android:textOn="Nhà vợ"
                    android:background="@drawable/border_rounded_toggle"
                    android:id="@+id/button3"
                    android:textColor="@drawable/border_rounded_toggle_text"
                    android:layout_weight="1"
                    android:tag="3"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/taskbar_height"
        android:gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_done"
            android:contentDescription="@string/choose_location_textButtonAddLocation"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/choose_location_DoneButton"/>

        <ImageButton
            android:layout_width="@dimen/taskbar_iconSize"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:src="@mipmap/ic_add"
            android:contentDescription="@string/task_detail_textButtonCancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
    </RelativeLayout>
</LinearLayout>
